--- a/src/input.css
+++ b/src/input.css
@@ -2,6 +2,78 @@
 @plugin "daisyui"{
     themes: all;
   }
+
+@plugin "daisyui/theme" {
+  name: "invincible_day";
+  default: true;
+  prefersdark: false;
+  color-scheme: "light";
+  --color-base-100: oklch(98% 0 0);
+  --color-base-200: oklch(98% 0 0);
+  --color-base-300: oklch(95% 0 0);
+  --color-base-content: oklch(21% 0.006 285.885);
+  --color-primary: #3c90ce;
+  --color-primary-content: oklch(97.807% 0.029 256.847);
+  --color-secondary: #e23734;
+  --color-secondary-content: oklch(97.807% 0.029 256.847);
+  --color-accent: #2c3e65;
+  --color-accent-content: oklch(97.807% 0.029 256.847);
+  --color-neutral: #1c2d4f;
+  --color-neutral-content: oklch(97.807% 0.029 256.847);
+  --color-info: oklch(74% 0.16 232.661);
+  --color-info-content: oklch(97.807% 0.029 256.847);
+  --color-success: oklch(76% 0.177 163.223);
+  --color-success-content: oklch(97.807% 0.029 256.847);
+  --color-warning: oklch(82% 0.189 84.429);
+  --color-warning-content: oklch(97.807% 0.029 256.847);
+  --color-error: oklch(71% 0.194 13.428);
+  --color-error-content: oklch(97.807% 0.029 256.847);
+  --radius-selector: 1rem;
+  --radius-field: 0.5rem;
+  --radius-box: 0.25rem;
+  --size-selector: 0.25rem;
+  --size-field: 0.25rem;
+  --border: 1px;
+  --depth: 1;
+  --noise: 0;
+}
+
+@plugin "daisyui/theme" {
+  name: "invincible_night";
+  default: false;
+  prefersdark: true;
+  color-scheme: "dark";
+  --color-base-100: oklch(25.33% 0.016 252.42);
+  --color-base-200: oklch(23.26% 0.014 253.1);
+  --color-base-300: oklch(21.15% 0.012 254.09);
+  --color-base-content: oklch(97.807% 0.029 256.847);
+  --color-primary: #3c90ce;
+  --color-primary-content: oklch(97.807% 0.029 256.847);
+  --color-secondary: #e23734;
+  --color-secondary-content: oklch(97.807% 0.029 256.847);
+  --color-accent: #2c3e65;
+  --color-accent-content: oklch(97.807% 0.029 256.847);
+  --color-neutral: #1c2d4f;
+  --color-neutral-content: oklch(97.807% 0.029 256.847);
+  --color-info: oklch(74% 0.16 232.661);
+  --color-info-content: oklch(97.807% 0.029 256.847);
+  --color-success: oklch(76% 0.177 163.223);
+  --color-success-content: oklch(97.807% 0.029 256.847);
+  --color-warning: oklch(82% 0.189 84.429);
+  --color-warning-content: oklch(97.807% 0.029 256.847);
+  --color-error: oklch(71% 0.194 13.428);
+  --color-error-content: oklch(97.807% 0.029 256.847);
+  --radius-selector: 1rem;
+  --radius-field: 0.5rem;
+  --radius-box: 0.25rem;
+  --size-selector: 0.25rem;
+  --size-field: 0.25rem;
+  --border: 1px;
+  --depth: 1;
+  --noise: 0;
+}
+
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
