--- a/src/input.css
+++ b/src/input.css
@@ -99,7 +99,19 @@
 }
 
 .theader{
-	@apply bg-primary text-white grid card shadow-md shadow-primary/50;
+  @apply bg-primary text-white grid card shadow-md shadow-primary/50;
+}
+.article-card{
+  @apply card bg-base-100 p-4 mb-4 shadow hover:shadow-lg transition-shadow duration-300 ease-in-out hover:cursor-pointer;
+}
+.tags{
+  @apply mr-2 mb-2;
+}
+.tag{
+  @apply badge badge-sm text-white font-bold hover:bg-accent hover:shadow-md hover:cursor-pointer;
+}
+.header{
+  @apply text-xl font-bold mb-4;
 }
 
 @keyframes fade {
