--- a/src/input.css
+++ b/src/input.css
@@ -83,6 +83,10 @@
   @apply text-xl font-bold mb-2;
 }
 
+.text-muted{
+  @apply opacity-60;
+}
+
 .stat-bar {
 	margin: 0.5rem 0;
 	user-select: none;
