Add leaderboard table
Introduced new CSS classes for table rows and headers in input.css to enhance table styling. Updated the leaderboards section in main.js to display a styled, interactive leaderboard table with search and navigation options. Also made the 'Load More' button bold for better visibility.

--- a/src/input.css
+++ b/src/input.css
@@ -87,6 +87,14 @@
   @apply opacity-60;
 }
 
+.table-row {
+  @apply hover:cursor-pointer hover:bg-accent hover:text-white card table table-fixed;
+}
+
+.table-header {
+  @apply bg-secondary text-white card table table-fixed;
+}
+
 .stat-bar {
 	margin: 0.5rem 0;
 	user-select: none;
